Get rid of some code smells and update to Java 19.